# lightweight_yt_downlader

./: .gitignore  README.md  pyproject.toml
src/youtube_mp3/: cli.py  downloader.py
test/: test_downloader.py
