[tool.poetry]
name = "youtube-mp3"
version = "0.1.0"
description = "A lightweight YouTube to MP3 downloader"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yt-dlp = "^2024.10.22"
ffmpeg-python = "^0.2.0"
click = "^8.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"